2004-04-29  Duncan Mak  <duncan@ximian.com>

	* vte/vte-sharp.dll.config.in: Removed extra </configuration>
	element.
	
2004-04-29  Owen Fraser-Green  <owen@discobabe.net>

	* gnome/CanvasGroup.custom : added public constructor.

2004-04-29  Mike Kestner  <mkestner@ximian.com>

	* configure.in : expand the new config files.
	* */*config.in : the per-assembly config files.
	* */Makefile.am : dist, clean, and install the configs.
	* gnome/*.c* : fix some errant DllImports.

2004-04-28  Mike Kestner  <mkestner@ximian.com>

	[Expanded from patch by John Luke attached to bug.]
	* gdk/Gdk.metadata : rename Atom.Name to GetName so it props.
	* gdk/Atom.custom : new string cast operator.
	* sample/TestDnd.cs : fix Atom.Name reference
	* sample/GtkDemo/DemoEditableCell.cs : fix a ListStore.Remove
	ref broken by last commit.
	[Fixes #57721]

2004-04-28  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : mark ListStore.Remove iter pass_as=ref.
	[Fixes #56945]

2004-04-28  Mike Kestner  <mkestner@ximian.com>

	* Makefile.am : dist the public signing key baulig just added.

2004-04-27  Mike Kestner  <mkestner@ximian.com>

	* gnome/glue/canvaspoints.c : remove some g_prints spotted by
	Jorge Garcia.

2004-04-16  Rachel Hestilow  <rachel@nullenvoid.com>

	* generator/GObjectGen.cs: Added new generatable to handle
	plain GObjects the same way we do subclasses.
	* generator/ManualGen.cs: Make FromNative/FromNativeReturn virtual
	to allow overriding.
	* generator/SymbolTable.cs: Use GObjectGen instead of
	ManualGen for GObject.
	* generator/Makefile.am: Add GObjectGen.cs.

2004-04-16  Boyd Timothy  <btimothy@novell.com>

	* gdk/Global.custom : properties to expose window manager spec
	properties.
	* gdk/glue/windowmanager.c : glue to retrieve window manager props
	using gdk_property_get.
	* gdk/glue/Makefile.am : add new file.
	* gdk/glue/makefile.win32 : add new file.

2004-04-13  Mike Kestner  <mkestner@ximian.com>

	* glib/Value.cs : fix a csc-breaker.
