@@ -1,3 +1,10 @@
+2004-04-29  Owen Fraser-Green  <owen@discobabe.net>
+
+	* generator/ClassBase.cs: added base case to Parent to avoid
+	infinite recursion.
+	* glib/Marshaller.cs: changed SizeOf(typeof's to int and long
+	instead of string.
+
 2004-04-29  Duncan Mak  <duncan@ximian.com>
 
 	* vte/vte-sharp.dll.config.in: Removed extra </configuration>
